--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -51,20 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\msys64\\ucrt64\\bin\\python.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/msys64/ucrt64/bin/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dataclasses import dataclass   # for defining dataclasses\n",
     "from enum import Enum               # for defining enumerations\n",
@@ -96,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -364,139 +353,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Changes Below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hint\n",
+    "\n",
+    "Now that the base rules and basic gameplay have been established, we can continue to enhance the gameplay experience by providing the player with a hint if they choose to receive one. We must ensure that the hint given does not waste time by giving information that the player has already figured out. To do this, the hint will either tell them the correct position of one of their yellow clues, or will give a letter that is in the word that they have not yet found (but not its position)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing\n",
+    "\n",
+    "This section shows all the tests that have been made for each of the methods that require it, with all possible scenarios accounted for. The adjacent comment will describe the expected output of the test.\n",
+    "\n",
+    "### check_letter"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "Guess the wordle, you have 5 guesses remaining.\n"
+      "Clue.GREEN\n",
+      "Clue.YELLOW\n",
+      "Clue.GREY\n"
      ]
     }
    ],
    "source": [
-    "game.print_state()"
+    "print(check_letter(\"S\", 0, \"STOUT\")) #Clue.GREEN\n",
+    "print(check_letter(\"T\", 0, \"STOUT\")) #Clue.YELLOW\n",
+    "print(check_letter(\"P\", 0, \"STOUT\")) #Clue.GREY"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "Guess the wordle, you have 4 guesses remaining.\n"
-     ]
-    }
-   ],
-   "source": [
-    "game.make_guess(\"berny\")\n",
-    "game.print_state()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.YELLOW: 2>]\n",
-      "Guess the wordle, you have 3 guesses remaining.\n"
-     ]
-    }
-   ],
-   "source": [
-    "game.make_guess(\"adieu\")\n",
-    "game.print_state()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.YELLOW: 2>]\n",
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.YELLOW: 2>, <Clue.GREY: 3>, <Clue.GREEN: 1>]\n",
-      "Guess the wordle, you have 2 guesses remaining.\n"
-     ]
-    }
-   ],
-   "source": [
-    "game.make_guess(\"stunt\")\n",
-    "game.print_state()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.YELLOW: 2>]\n",
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.YELLOW: 2>, <Clue.GREY: 3>, <Clue.GREEN: 1>]\n",
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREEN: 1>, <Clue.GREEN: 1>]\n",
-      "Guess the wordle, you have 1 guesses remaining.\n"
-     ]
-    }
-   ],
-   "source": [
-    "game.make_guess(\"strut\")\n",
-    "game.print_state()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>]\n",
-      "[<Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.YELLOW: 2>]\n",
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.YELLOW: 2>, <Clue.GREY: 3>, <Clue.GREEN: 1>]\n",
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREEN: 1>, <Clue.GREEN: 1>]\n",
-      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREEN: 1>]\n",
-      "You won! You took 6 guesses.\n"
-     ]
-    }
-   ],
-   "source": [
-    "game.make_guess(\"stout\")\n",
-    "game.print_state()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -515,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
