using sample solution

--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -50,6 +51,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Programme\n",
+    "\n",
+    "## Setup\n",
+    "\n",
+    "Here, we simply include some imports for the later, as well as download a list of valid 5-letter words. Note, if the download  does not work, you can simply define a list of custom list of 5-letter strings, i.e. `WORDS = [\"HELLO\", ...]`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -69,6 +82,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,6 +118,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,12 +127,12 @@
     "We can now introduce a `Guess` type, which represents a guess after it is processed by the game (i.e. one line of the output). We use the `dataclass' decorator and properties to simplify definition. This includes the word that was guessed, and the clues.\n",
     "\n",
     "1. There are two invariants to add to the `setter` functions; what are these? Complete the assertions and include an appropriate message for when they fail. These should restrict the values that `word` and `clues` can take. \n",
-    "2. Create some test values for `Guess` to demonstrate the invariants, i.e. `g1 = Guess(\"HELLO\", [Clue.YELLOW, ...])`."
+    "2. Create some test values for `Guess` to demonstrate the invariants, i.e.  `g1 = Guess(\"HELLO\", [Clue.YELLOW, ...])`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,8 +152,8 @@
     "    @word.setter\n",
     "    def word(self, word: Word):\n",
     "        # invariant\n",
-    "        assert True\n",
-    "\n",
+    "        assert len(word) == WORD_LENGTH, \\\n",
+    "            f\"Invariant violated: len(Guess.word) <> {WORD_LENGTH}\"  \n",
     "        self._word = word\n",
     "\n",
     "    @property\n",
@@ -148,8 +163,8 @@
     "    @clues.setter\n",
     "    def clues(self, clues: Clue):\n",
     "        # invariant\n",
-    "        assert True\n",
-    "\n",
+    "        assert len(clues) == WORD_LENGTH, \\\n",
+    "            f\"Invariant violated: len(Guess.clues) <> {WORD_LENGTH}\"              \n",
     "        self._clues = clues\n",
     "\n",
     "    def __repr__(self):\n",
@@ -158,11 +173,15 @@
     "        \"\"\"\n",
     "        cluestr = [str(self.word[i]) + \": \" + \\\n",
     "            self.clues[i].name for i in range(WORD_LENGTH)]\n",
-    "        return f\"{self.word}: {cluestr}\"    \n",
-    "           \n"
+    "        return f\"{self.word}: {cluestr}\"       \n",
+    "\n",
+    "g1 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW])\n",
+    "#g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW])\n",
+    "#g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN]) "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -192,7 +211,17 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clue.GREEN\n",
+      "Clue.YELLOW\n",
+      "Clue.GREY\n"
+     ]
+    }
+   ],
    "source": [
     "def check_letter(letter: str, index: int, word: Word) -> Clue:\n",
     "    \"\"\"\n",
@@ -200,19 +229,16 @@
     "    based on the word.\n",
     "    \"\"\"\n",
     "    # pre-condition\n",
-    "    assert len(letter) == 1\n",
+    "    assert 0 <= index < WORD_LENGTH and \\\n",
+    "           len(word) == WORD_LENGTH, \"pre-check_letter failed.\"\n",
     "           \n",
-    "    if word[index] == letter:\n",
-    "        return Clue.GREEN\n",
-    "    \n",
-    "    if letter in word:\n",
-    "        return Clue.YELLOW\n",
-    "    \n",
-    "    return Clue.GREY\n",
-    "\n"
+    "    if word[index] == letter: return Clue.GREEN  \n",
+    "    elif letter not in word: return Clue.GREY\n",
+    "    else: return Clue.YELLOW"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -227,9 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Clue.GREEN: 1>, <Clue.GREEN: 1>, <Clue.GREY: 3>, <Clue.GREY: 3>, <Clue.YELLOW: 2>]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def check_guess(word: Word, guess: Word) -> List[Clue]:\n",
@@ -238,19 +272,20 @@
     "    clues corresponding to each letter.\n",
     "    \"\"\"\n",
     "    # pre-condition\n",
-    "    assert len(word) == 5 and len(guess) == 5\n",
-    "    \n",
-    "    clues = []\n",
-    "    for index, letter in enumerate(guess):\n",
-    "        clues.append(check_letter(letter, index, word))\n",
-    "        \n",
-    "    return clues\n",
+    "    assert len(word) == WORD_LENGTH and \\\n",
+    "           len(guess) == WORD_LENGTH, \"pre-check_guess failed\"\n",
     "           \n",
-    "    \n",
-    "\n"
+    "    clues = []\n",
+    "    for i,letter in enumerate(guess):\n",
+    "        clue = check_letter(guess[i], i ,word)\n",
+    "        clues.append(clue)\n",
+    "    return clues\n",
+    "\n",
+    "print(check_guess(\"STAND\", \"STOUT\"))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -258,6 +293,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -275,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -309,17 +345,13 @@
     "        word = word.upper() \n",
     "\n",
     "        # pre-condition\n",
-    "        assert len(word) == 5\n",
-    "        \n",
-    "        guess = check_guess(self.answer, word)\n",
-    "        self.guesses.append(guess)\n",
-    "        \n",
-    "        done = True\n",
-    "        for i in guess:\n",
-    "            if i != Clue.GREEN:\n",
-    "                done = False\n",
-    "        if done:\n",
-    "            self.gstate = Gamestate.WON\n",
+    "        assert self.gstate == Gamestate.PLAYING and \\\n",
+    "               len(self.guesses) < MAX_GUESSES and \\\n",
+    "               word in WORDS, \"pre-guess failed.\"\n",
+    "               \n",
+    "        self.guesses.append(Guess(word, check_guess(self.answer, word)))\n",
+    "        if word == self.answer: self.gstate = Gamestate.WON\n",
+    "        elif len(self.guesses) == MAX_GUESSES: self.gstate = Gamestate.LOST\n",
     "\n",
     "    def print_state(self):\n",
     "        \"\"\"\n",
@@ -365,7 +397,7 @@
    "source": [
     "# Hint\n",
     "\n",
-    "Now that the base rules and basic gameplay have been established, we can continue to enhance the gameplay experience by providing the player with a hint if they choose to receive one. We must ensure that the hint given does not waste time by giving information that the player has already figured out. To do this, the hint will either tell them the correct position of one of their yellow clues, or will give a letter that is in the word that they have not yet found (but not its position)."
+    "Now that the base rules and basic gameplay have been established, we can continue to enhance the gameplay experience by providing the player with a hint - if they choose to receive one. We must ensure that the hint given does not waste time by giving information that the player has already figured out. To do this, the hint will either tell them the correct position of one of their yellow clues (if they have any in their most recent guess), or will give a letter that is in the word that they have not yet found.\n"
    ]
   },
   {
@@ -374,11 +406,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define Hint as an alias for string\n",
     "Hint = str\n",
     "\n",
-    "def hint() -> Hint:\n",
-    "    "
+    "def hint(game: Game) -> Hint:"
    ]
   },
   {
@@ -394,29 +424,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clue.GREEN\n",
-      "Clue.YELLOW\n",
-      "Clue.GREY\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(check_letter(\"S\", 0, \"STOUT\")) #Clue.GREEN\n",
-    "print(check_letter(\"T\", 0, \"STOUT\")) #Clue.YELLOW\n",
-    "print(check_letter(\"P\", 0, \"STOUT\")) #Clue.GREY"
+    "print(check_letter(\"S\", 3, \"STOUT\")) #Clue.YELLOW\n",
+    "print(check_letter(\"Z\", 0, \"STOUT\")) #Clue.GREY\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -432,6 +452,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "9650cb4e16cdd4a8e8e2d128bf38d875813998db22a3c986335f89e0cb4d7bb2"
