--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,11 +173,7 @@
     "        \"\"\"\n",
     "        cluestr = [str(self.word[i]) + \": \" + \\\n",
     "            self.clues[i].name for i in range(WORD_LENGTH)]\n",
-    "        return f\"{self.word}: {cluestr}\"       \n",
-    "\n",
-    "g1 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW])\n",
-    "#g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW])\n",
-    "#g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN]) "
+    "        return f\"{self.word}: {cluestr}\"       \n"
    ]
   },
   {
@@ -209,19 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clue.GREEN\n",
-      "Clue.YELLOW\n",
-      "Clue.GREY\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def check_letter(letter: str, index: int, word: Word) -> Clue:\n",
     "    \"\"\"\n",
@@ -253,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +263,7 @@
     "           \n",
     "    clues = []\n",
     "    for i,letter in enumerate(guess):\n",
-    "        clue = check_letter(guess[i], i ,word)\n",
+    "        clue = check_letter(letter, i ,word)\n",
     "        clues.append(clue)\n",
     "    return clues\n",
     "\n",
@@ -311,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -395,20 +381,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hint\n",
+    "## Hint\n",
     "\n",
-    "Now that the base rules and basic gameplay have been established, we can continue to enhance the gameplay experience by providing the player with a hint - if they choose to receive one. We must ensure that the hint given does not waste time by giving information that the player has already figured out. To do this, the hint will either tell them the correct position of one of their yellow clues (if they have any in their most recent guess), or will give a letter that is in the word that they have not yet found.\n"
+    "Now that the base rules and basic gameplay have been established, we can continue to enhance the gameplay experience by providing the player with a hint - if they choose to receive one. As we are given that hint must be a single character between [A-Z], I will make the hint simply reveal a letter they have not tried yet that is currently in the word.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STAND\n"
+     ]
+    }
+   ],
    "source": [
     "Hint = str\n",
     "\n",
-    "def hint(game: Game) -> Hint:"
+    "def hint(game: Game) -> Hint:\n",
+    "    #.word and .clues\n",
+    "    if any(game.guesses[::-1].clues) == Clue.YELLOW:\n",
+    "        return game.guesses\n",
+    "\n",
+    "hint(game)"
    ]
   },
   {
@@ -417,8 +416,31 @@
    "source": [
     "## Testing\n",
     "\n",
-    "This section shows all the tests that have been made for each of the methods that require it, with all possible scenarios accounted for. The adjacent comment will describe the expected output of the test.\n",
-    "\n",
+    "This section shows all the tests that have been made for each of the methods that require it, with all possible scenarios accounted for. The adjacent comment will describe the expected output of the test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g1 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW])\n",
+    "g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW])\n",
+    "g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### check_letter"
    ]
   },
