--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -388,26 +388,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "STAND\n"
+     "ename": "AssertionError",
+     "evalue": "pre-hint failed.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[42], line 26\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m re\u001b[38;5;241m.\u001b[39mmatch(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m^[A-Z]$\u001b[39m\u001b[38;5;124m'\u001b[39m, hint)\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m hint\n\u001b[1;32m---> 26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mhint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mguesses\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43manswer\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[42], line 8\u001b[0m, in \u001b[0;36mhint\u001b[1;34m(guesses, answer)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mhint\u001b[39m(guesses: List[Guess], answer: Word) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Hint:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m#.word and .clues\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m re\u001b[38;5;241m.\u001b[39mmatch(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m^[A-Z]\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mWORD_LENGTH\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m$\u001b[39m\u001b[38;5;124m'\u001b[39m, answer) \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[0;32m      9\u001b[0m         game\u001b[38;5;241m.\u001b[39mgstate \u001b[38;5;241m==\u001b[39m Gamestate\u001b[38;5;241m.\u001b[39mPLAYING \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[0;32m     10\u001b[0m         answer \u001b[38;5;129;01min\u001b[39;00m WORDS \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;28mlen\u001b[39m(guesses) \u001b[38;5;241m<\u001b[39m MAX_GUESSES, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpre-hint failed.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     13\u001b[0m     greens \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, WORD_LENGTH))\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m guesses:\n",
+      "\u001b[1;31mAssertionError\u001b[0m: pre-hint failed."
      ]
     }
    ],
    "source": [
+    "import re\n",
+    "\n",
     "Hint = str\n",
     "\n",
-    "def hint(game: Game) -> Hint:\n",
+    "def hint(guesses: List[Guess], answer: Word) -> Hint:\n",
     "    #.word and .clues\n",
-    "    if any(game.guesses[::-1].clues) == Clue.YELLOW:\n",
-    "        return game.guesses\n",
     "\n",
-    "hint(game)"
+    "    assert re.match('^[A-Z]{%d}$' % WORD_LENGTH, answer) and \\\n",
+    "        game.gstate == Gamestate.PLAYING and \\\n",
+    "        answer in WORDS and \\\n",
+    "        len(guesses) < MAX_GUESSES, \"pre-hint failed.\"\n",
+    "    \n",
+    "    greens = list(range(0, WORD_LENGTH))\n",
+    "\n",
+    "    for i in guesses:\n",
+    "        for j in range(0, WORD_LENGTH):\n",
+    "            if i.clues[j] == Clue.GREEN:\n",
+    "                greens.remove(j)\n",
+    "    \n",
+    "    hint = answer[random.choice(greens)]\n",
+    "\n",
+    "    assert re.match('^[A-Z]$', hint)\n",
+    "\n",
+    "    return hint\n",
+    "\n",
+    "print(hint(game.guesses, game.answer))"
    ]
   },
   {
@@ -428,13 +451,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO: ['H: YELLOW', 'E: YELLOW', 'L: GREY', 'L: GREEN', 'O: YELLOW']\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Invariant violated: len(Guess.word) <> 5",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m g1 \u001b[38;5;241m=\u001b[39m Guess(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHELLO\u001b[39m\u001b[38;5;124m\"\u001b[39m, [Clue\u001b[38;5;241m.\u001b[39mYELLOW, Clue\u001b[38;5;241m.\u001b[39mYELLOW, Clue\u001b[38;5;241m.\u001b[39mGREY, Clue\u001b[38;5;241m.\u001b[39mGREEN, Clue\u001b[38;5;241m.\u001b[39mYELLOW]) \u001b[38;5;66;03m# Success\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(g1)\n\u001b[1;32m----> 3\u001b[0m g2 \u001b[38;5;241m=\u001b[39m \u001b[43mGuess\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHELL\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mYELLOW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mYELLOW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGREY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGREEN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mYELLOW\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Assertion Error\u001b[39;00m\n\u001b[0;32m      4\u001b[0m g3 \u001b[38;5;241m=\u001b[39m Guess(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHELLO\u001b[39m\u001b[38;5;124m\"\u001b[39m, [Clue\u001b[38;5;241m.\u001b[39mYELLOW, Clue\u001b[38;5;241m.\u001b[39mYELLOW, Clue\u001b[38;5;241m.\u001b[39mGREY, Clue\u001b[38;5;241m.\u001b[39mGREEN]) \u001b[38;5;66;03m# Assertion Error\u001b[39;00m\n",
+      "File \u001b[1;32m<string>:3\u001b[0m, in \u001b[0;36m__init__\u001b[1;34m(self, word, clues)\u001b[0m\n",
+      "Cell \u001b[1;32mIn[9], line 17\u001b[0m, in \u001b[0;36mGuess.word\u001b[1;34m(self, word)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;129m@word\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mword\u001b[39m(\u001b[38;5;28mself\u001b[39m, word: Word):\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;66;03m# invariant\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(word) \u001b[38;5;241m==\u001b[39m WORD_LENGTH, \\\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvariant violated: len(Guess.word) <> \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mWORD_LENGTH\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m  \n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_word \u001b[38;5;241m=\u001b[39m word\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Invariant violated: len(Guess.word) <> 5"
+     ]
+    }
+   ],
    "source": [
-    "g1 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW])\n",
-    "g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW])\n",
-    "g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN])"
+    "g1 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Successful Guess object creation\n",
+    "print(g1) # HELLO: ['H: YELLOW', 'E: YELLOW', 'L: GREY', 'L: GREEN', 'O: YELLOW'] (using __repr__)\n",
+    "\n",
+    "g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Assertion Error\n",
+    "g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN]) # Assertion Error"
    ]
   },
   {
@@ -452,7 +498,24 @@
    "source": [
     "print(check_letter(\"S\", 0, \"STOUT\")) #Clue.GREEN\n",
     "print(check_letter(\"S\", 3, \"STOUT\")) #Clue.YELLOW\n",
-    "print(check_letter(\"Z\", 0, \"STOUT\")) #Clue.GREY\n"
+    "print(check_letter(\"Z\", 0, \"STOUT\")) #Clue.GREY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    \n",
+    "print(hint(game.guesses, game.answer))"
    ]
   }
  ],
