all tasks done, need to add tests and do extensions

--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -265,9 +265,7 @@
     "    for i,letter in enumerate(guess):\n",
     "        clue = check_letter(letter, i ,word)\n",
     "        clues.append(clue)\n",
-    "    return clues\n",
-    "\n",
-    "print(check_guess(\"STAND\", \"STOUT\"))"
+    "    return clues\n"
    ]
   },
   {
@@ -364,10 +362,7 @@
     "        self.answer = random.choice(WORDS)\n",
     "        self.guesses = []\n",
     "        self.gstate = Gamestate.PLAYING\n",
-    "   \n",
-    "game = Game()\n",
-    "game.print_state()\n",
-    "game.make_guess(\"stand\")\n"
+    "   "
    ]
   },
   {
@@ -388,19 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "pre-hint failed.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[42], line 26\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m re\u001b[38;5;241m.\u001b[39mmatch(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m^[A-Z]$\u001b[39m\u001b[38;5;124m'\u001b[39m, hint)\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m hint\n\u001b[1;32m---> 26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mhint\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mguesses\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43manswer\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[42], line 8\u001b[0m, in \u001b[0;36mhint\u001b[1;34m(guesses, answer)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mhint\u001b[39m(guesses: List[Guess], answer: Word) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Hint:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m#.word and .clues\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m re\u001b[38;5;241m.\u001b[39mmatch(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m^[A-Z]\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mWORD_LENGTH\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m$\u001b[39m\u001b[38;5;124m'\u001b[39m, answer) \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[0;32m      9\u001b[0m         game\u001b[38;5;241m.\u001b[39mgstate \u001b[38;5;241m==\u001b[39m Gamestate\u001b[38;5;241m.\u001b[39mPLAYING \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[0;32m     10\u001b[0m         answer \u001b[38;5;129;01min\u001b[39;00m WORDS \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[0;32m     11\u001b[0m         \u001b[38;5;28mlen\u001b[39m(guesses) \u001b[38;5;241m<\u001b[39m MAX_GUESSES, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpre-hint failed.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     13\u001b[0m     greens \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, WORD_LENGTH))\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m guesses:\n",
-      "\u001b[1;31mAssertionError\u001b[0m: pre-hint failed."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O\n"
      ]
     }
    ],
@@ -412,25 +402,119 @@
     "def hint(guesses: List[Guess], answer: Word) -> Hint:\n",
     "    #.word and .clues\n",
     "\n",
+    "    # pre-condition\n",
     "    assert re.match('^[A-Z]{%d}$' % WORD_LENGTH, answer) and \\\n",
-    "        game.gstate == Gamestate.PLAYING and \\\n",
     "        answer in WORDS and \\\n",
     "        len(guesses) < MAX_GUESSES, \"pre-hint failed.\"\n",
     "    \n",
-    "    greens = list(range(0, WORD_LENGTH))\n",
+    "    # array of all letter indices\n",
+    "    grey = list(range(0, WORD_LENGTH))\n",
     "\n",
     "    for i in guesses:\n",
     "        for j in range(0, WORD_LENGTH):\n",
-    "            if i.clues[j] == Clue.GREEN:\n",
-    "                greens.remove(j)\n",
+    "            if i.clues[j] == Clue.GREEN or i.clues[j] == Clue.YELLOW:\n",
+    "                # remove indices with a yellow or green clue already\n",
+    "                grey.remove(j)\n",
     "    \n",
-    "    hint = answer[random.choice(greens)]\n",
+    "    # set hint to a random currently grey letter\n",
+    "    hint = answer[random.choice(grey)]\n",
     "\n",
     "    assert re.match('^[A-Z]$', hint)\n",
     "\n",
-    "    return hint\n",
+    "    return hint\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Duplicate Letters\n",
     "\n",
-    "print(hint(game.guesses, game.answer))"
+    "Our current implementation of the clues considers each letter independently, which means that duplicate letters are not handles correctly. For example, if a player guesses \"STOUT\" and the correct word is \"STAND\", the first \"T\" will be labelled green as intended, but the second will be labeled yellow, when it should be grey. To account for this, we will rewrite check_guess to compare the whole word together, removing check_letter entirely."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_guess(word: Word, guess: Word) -> List[Clue]:\n",
+    "    \"\"\"\n",
+    "    Given the answer and a guess, compute the list of \n",
+    "    clues corresponding to each letter.\n",
+    "    \"\"\"\n",
+    "    # pre-condition, keeping same as before\n",
+    "    assert len(word) == WORD_LENGTH and \\\n",
+    "           len(guess) == WORD_LENGTH and \\\n",
+    "            guess in WORDS and word in WORDS, \"pre-check_guess failed\"\n",
+    "    \n",
+    "    # placeholders\n",
+    "    clues = [Clue.GREY for x in range(WORD_LENGTH)]\n",
+    "\n",
+    "\n",
+    "    # greens first\n",
+    "    for i, letter in enumerate(guess):\n",
+    "        if word[i] == letter:\n",
+    "            clues[i] = Clue.GREEN\n",
+    "            word = word[:i] + '*' + word[i + 1:]\n",
+    "    \n",
+    "    # yellows next, greys remaining are grey\n",
+    "    for i, letter in enumerate(guess):\n",
+    "        # either make the comparison of not green or replace it in guess as well, but a bit more work to do that so just this check\n",
+    "        if letter in word and clues[i] != Clue.GREEN:\n",
+    "            clues[i] = Clue.YELLOW\n",
+    "            # replace one instance of the letter in the answer, in case of duplicates\n",
+    "            word = word.replace(letter, '*', 1)\n",
+    "            \n",
+    "    \n",
+    "    return clues\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hard Mode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wordle has a \"Hard mode\" with the following definition: \"Any revealed hints must be used in subsequent guesses.\" This rule further constrains what strings a user can guess with. We will implement this using a method called 'hard_guess', based off the 'make_guess' method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hard_guess(self, guess: Word):\n",
+    "    recent_clues = self.guesses[-1] # obtain most recent guess info (all previous guesses will have incorporated the hints before)\n",
+    "    required = \"*\" * WORD_LENGTH\n",
+    "    included = []\n",
+    "\n",
+    "    for i, letter in enumerate(guess):\n",
+    "        if recent_clues.clues[i] == Clue.GREEN:\n",
+    "            required = required[:i] + letter + required[i + 1:]\n",
+    "        elif recent_clues.clues[i] == Clue.YELLOW:\n",
+    "            included.append(letter)\n",
+    "\n",
+    "    # regex statements\n",
+    "    pattern_1 = re.compile(\"^%s$\" % required.replace('*', \"[A-Z]\"))\n",
+    "    pattern_2 = re.compile(\"\".join([f'(?=.*{char})' for char in included]))\n",
+    "\n",
+    "    assert pattern_1.match(guess) and (pattern_2.match(guess) if len(included) > 0 else True), \"pre-hard_guess failed\"\n",
+    "    #assert pattern_2.match(guess) if len(included) > 0 else True\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "# Attach the hard_guess method to Game class\n",
+    "Game.hard_guess = hard_guess"
    ]
   },
   {
@@ -446,12 +530,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess the wordle, you have 6 guesses remaining.\n",
+      "0 S\n",
+      "Clue.GREEN\n",
+      "S****\n",
+      "1 I\n",
+      "Clue.GREY\n",
+      "2 S\n",
+      "Clue.GREY\n",
+      "3 S\n",
+      "Clue.GREEN\n",
+      "S**S*\n",
+      "4 Y\n",
+      "Clue.GREY\n",
+      "re.compile('^S[A-Z][A-Z]S[A-Z]$')\n"
+     ]
+    }
+   ],
+   "source": [
+    "game = Game(\"SISSY\")\n",
+    "game.print_state()\n",
+    "game.make_guess(\"SLASH\")\n",
+    "game.hard_guess(\"SISSY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Guess"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -460,27 +584,14 @@
      "text": [
       "HELLO: ['H: YELLOW', 'E: YELLOW', 'L: GREY', 'L: GREEN', 'O: YELLOW']\n"
      ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Invariant violated: len(Guess.word) <> 5",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m g1 \u001b[38;5;241m=\u001b[39m Guess(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHELLO\u001b[39m\u001b[38;5;124m\"\u001b[39m, [Clue\u001b[38;5;241m.\u001b[39mYELLOW, Clue\u001b[38;5;241m.\u001b[39mYELLOW, Clue\u001b[38;5;241m.\u001b[39mGREY, Clue\u001b[38;5;241m.\u001b[39mGREEN, Clue\u001b[38;5;241m.\u001b[39mYELLOW]) \u001b[38;5;66;03m# Success\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(g1)\n\u001b[1;32m----> 3\u001b[0m g2 \u001b[38;5;241m=\u001b[39m \u001b[43mGuess\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHELL\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mYELLOW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mYELLOW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGREY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGREEN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mClue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mYELLOW\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# Assertion Error\u001b[39;00m\n\u001b[0;32m      4\u001b[0m g3 \u001b[38;5;241m=\u001b[39m Guess(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHELLO\u001b[39m\u001b[38;5;124m\"\u001b[39m, [Clue\u001b[38;5;241m.\u001b[39mYELLOW, Clue\u001b[38;5;241m.\u001b[39mYELLOW, Clue\u001b[38;5;241m.\u001b[39mGREY, Clue\u001b[38;5;241m.\u001b[39mGREEN]) \u001b[38;5;66;03m# Assertion Error\u001b[39;00m\n",
-      "File \u001b[1;32m<string>:3\u001b[0m, in \u001b[0;36m__init__\u001b[1;34m(self, word, clues)\u001b[0m\n",
-      "Cell \u001b[1;32mIn[9], line 17\u001b[0m, in \u001b[0;36mGuess.word\u001b[1;34m(self, word)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;129m@word\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mword\u001b[39m(\u001b[38;5;28mself\u001b[39m, word: Word):\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;66;03m# invariant\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(word) \u001b[38;5;241m==\u001b[39m WORD_LENGTH, \\\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvariant violated: len(Guess.word) <> \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mWORD_LENGTH\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m  \n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_word \u001b[38;5;241m=\u001b[39m word\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Invariant violated: len(Guess.word) <> 5"
-     ]
     }
    ],
    "source": [
     "g1 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Successful Guess object creation\n",
     "print(g1) # HELLO: ['H: YELLOW', 'E: YELLOW', 'L: GREY', 'L: GREEN', 'O: YELLOW'] (using __repr__)\n",
     "\n",
-    "g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Assertion Error\n",
-    "g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN]) # Assertion Error"
+    "#g2 = Guess(\"HELL\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN, Clue.YELLOW]) # Assertion Error\n",
+    "#g3 = Guess(\"HELLO\", [Clue.YELLOW, Clue.YELLOW, Clue.GREY, Clue.GREEN]) # Assertion Error"
    ]
   },
   {
@@ -492,9 +603,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clue.GREEN\n",
+      "Clue.YELLOW\n",
+      "Clue.GREY\n"
+     ]
+    }
+   ],
    "source": [
     "print(check_letter(\"S\", 0, \"STOUT\")) #Clue.GREEN\n",
     "print(check_letter(\"S\", 3, \"STOUT\")) #Clue.YELLOW\n",
@@ -510,9 +631,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y\n"
+     ]
+    }
+   ],
    "source": [
     "    \n",
     "print(hint(game.guesses, game.answer))"
