--- a/Artefact/WordleExercises.ipynb
+++ b/Artefact/WordleExercises.ipynb
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,27 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Guess the wordle, you have 6 guesses remaining.\n",
-      "0 S\n",
-      "Clue.GREEN\n",
-      "S****\n",
-      "1 I\n",
-      "Clue.GREY\n",
-      "2 S\n",
-      "Clue.GREY\n",
-      "3 S\n",
-      "Clue.GREEN\n",
-      "S**S*\n",
-      "4 Y\n",
-      "Clue.GREY\n",
-      "re.compile('^S[A-Z][A-Z]S[A-Z]$')\n"
+      "Guess the wordle, you have 6 guesses remaining.\n"
      ]
     }
    ],
